# GraphRAG

./: .gitignore  README.md  pyproject.toml
src/: api.py  app.py  db.py  embeddings.py  graphrag.py  loader.py
src/data/: data.py
