[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-experimental>=0.4.2",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "neo4j>=6.2.0",
    "langchain-neo4j>=0.10.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "streamlit>=1.58.0",
]
